fixed collapse menu at mobile devices

--- a/app/styles/bootstrap.css
+++ b/app/styles/bootstrap.css
@@ -1772,6 +1772,27 @@ textarea.input-lg {
     text-align: right;
   }
 }
+.fade {
+  opacity: 0;
+  -webkit-transition: opacity 0.15s linear;
+  transition: opacity 0.15s linear;
+}
+.fade.in {
+  opacity: 1;
+}
+.collapse {
+  display: none;
+}
+.collapse.in {
+  display: block;
+}
+.collapsing {
+  position: relative;
+  height: 0;
+  overflow: hidden;
+  -webkit-transition: height 0.35s ease;
+  transition: height 0.35s ease;
+}
 .nav {
   margin-bottom: 0;
   padding-left: 0;
